--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,18 @@ body {
     background-color: darkseagreen;
 }
 
+/*changing paragraph element property values */
 p {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 80px;
     color: darkslategray;
     text-align: center;
+}
+ul {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    color: cornflowerblue;
+    list-style-type: georgian;
+    margin: 0;
+    padding: 0;
 }
