--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
 body {
     background-color: darkseagreen;
+    background-image: url("moon.jpg");
+    scale: 10px;
+    height: 2000px;
+    background-position: center;
+    background-size: cover;
 }
 
 /*changing paragraph element property values */
