--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 p {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 80px;
-    color: darkslategray;
+    color: goldenrod;
     text-align: center;
 }
 ul {
