--- a/aboutstyles.css
+++ b/aboutstyles.css
@@ -24,7 +24,7 @@ body {
 /*changing paragraph element property values */
 p {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 80px;
+    font-size: 50px;
     text-align: center;
 }
 ul {
@@ -34,4 +34,17 @@ ul {
     list-style-type: georgian;
     margin: 0;
     padding: 0;
+}
+
+a { font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 30px;
+    text-align: center;
+
+}
+
+h1 {font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 80px;
+    text-align: center;
+    color:lightsalmon;
+
 }
